--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
       </div>           
       <div class="container mt-4" id="quiz-container"></div>
     </main>
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
