--- a/index.html
+++ b/index.html
@@ -10,32 +10,36 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Quiz Maker</title>
   </head>
   <body>
     <header class="d-flex" id="header">
-      <p>
-        View high scores
-      </p>
-      <div class="container">
-        <p>Timer: <span id="time"></span></p>
-      </div>
+      <div class="container d-flex justify-content-between">
+        <p class="text-primary p-2 h5">
+          View high scores
+        </p>
+        <p class="p-2 h5">Timer: <span id="time"></span></p>
+      </div>   
+     
     </header>
-    <main class="container mt-4" id="main">
+    <main class="container mt-5 d-flex flex-wrap justify-content-center" id="main">
       <div id="main-text">
         <h1>
           Coding Quiz Challenge
         </h1>
-        <p>
+        <p class="h5">
           Try to answer the following code-related questions within the time limit. </br>
           Keep in mind that incorrect answers will penalize your score/time </br>
           by five seconds!
         </p>
-        <button type="button" id="quiz-button" class="btn btn-primary mt-4">
-          Start Quiz
-        </button> 
+        <div class="container d-flex justify-content-center mt-5">
+          <button type="button" id="quiz-button" class="btn btn-primary btn-lg mt-4">
+            <p class="h4">Start Quiz</p>
+          </button> 
+        </div>        
       </div>           
-      <div class="container mt-4" id="quiz-container"></div>
+      <div class="container mt-4 d-flex justify-content-center flex-wrap" id="quiz-container"></div>
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
