--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
      
     </header>
     <main class="container mt-5 d-flex flex-wrap justify-content-center" id="main">
-      <div id="main-text">
+      <div id="main-text" class="center p-4">
         <h1>
           Coding Quiz Challenge
         </h1>
-        <p class="h5">
+        <p class="h5 p-4">
           Try to answer the following code-related questions within the time limit. </br>
           Keep in mind that incorrect answers will penalize your score/time </br>
           by five seconds!
@@ -39,7 +39,7 @@
           </button> 
         </div>        
       </div>           
-      <div class="container mt-4 d-flex justify-content-center flex-wrap" id="quiz-container"></div>
+      <div class="container p-4 pt-0 d-flex justify-content-start flex-wrap" id="quiz-container"></div>
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
